# haskell-json-parsing-exercise

./: CHANGELOG.md  README.md  parser-combinators-exp.cabal
app/: Main.hs
src/: MyLib.hs
tests/: Test.hs
