cabal-version:      2.4
name:               parser-combinators-exp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             theschmocker
maintainer:         me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable parser-combinators-exp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        parser-combinators-exp

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite tests
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
    hs-source-dirs:   tests
    build-depends: base
                 , hspec
                 , parser-combinators-exp